chore: added available actions support
