# openapi3.yaml
@@ -19,6 +19,7 @@ paths:
         - $ref: '#/components/parameters/productType'
         - $ref: '#/components/parameters/internalId'
         - $ref: '#/components/parameters/domain'
+        - $ref: '#/components/parameters/availableActions'
       summary: find jobs by criteria
       tags:
         - jobs
@@ -73,6 +74,7 @@ paths:
     parameters:
       - $ref: '#/components/parameters/jobId'
       - $ref: '#/components/parameters/shouldReturnTasks'
+      - $ref: '#/components/parameters/availableActions'
     get:
       operationId: getJob
       summary: Get job by id
@@ -572,6 +574,15 @@ components:
       schema:
         type: boolean
         default: true
+    availableActions:
+      in: query
+      name: availableActions
+      description: |
+        Whether the job should return its available actions. default=false
+      required: false
+      schema:
+        type: boolean
+        default: false
     type:
       in: query
       name: type
@@ -786,6 +797,24 @@ components:
           type: string
         tasks:
           $ref: '#/components/schemas/tasksResponse'
+        availableActions:
+          $ref: '#/components/schemas/availableActions'
+    availableActions:
+      type: object
+      items:
+        $ref: '#/components/schemas/availableActionsResponse'
+    availableActionsResponse:
+      required:
+        - canPrioritize
+        - isAbortable
+        - isResumable
+      properties:
+        canPrioritize:
+          type: boolean
+        isAbortable:
+          type: boolean
+        isResumable:
+          type: boolean
     tasksResponse:
       type: array
       items:
