# src/common/dataModels/jobs.ts
@@ -8,6 +8,7 @@ export interface IJobsParams {
 
 export interface IJobsQuery {
   shouldReturnTasks: boolean;
+  availableActions: boolean;
 }
 
 export interface IFindJobsRequest {
@@ -17,6 +18,7 @@ export interface IFindJobsRequest {
   status?: OperationStatus;
   type?: string;
   shouldReturnTasks?: boolean;
+  availableActions?: boolean;
   productType?: string;
   fromDate?: string;
   tillDate?: string;
@@ -98,6 +100,7 @@ export interface IGetJobResponse {
   additionalIdentifiers?: string;
   expirationDate?: Date;
   domain: string;
+  availableActions?: IAvailableActions;
 }
 
 export interface ICreateJobResponse {
@@ -108,4 +111,10 @@ export interface ICreateJobResponse {
 export interface IIsResettableResponse {
   jobId: string;
   isResettable: boolean;
+}
+
+export interface IAvailableActions {
+  canPrioritize: boolean;
+  isAbortable: boolean;
+  isResumable: boolean;
 }
